Integrated MinIO-backed storage, introduced a standalone OCR worker with Tesseract, added unit tests, and tightened DevOps with healthchecks, retry/backoff, and DLQ across services